vlib/v/parser/tests/c_struct_no_embed.out
vlib/v/parser/tests/c_struct_no_embed.vv:7:1: error: bad type syntax
    5 | struct C.Unknown {
    6 |     Foo
    7 | }
      | ^