vlib/v/parser/tests/c_struct_no_embed.vv
struct Foo {
	x int
}

pub struct C.Unknown {
	Foo
}